--- a/templates/result.html
+++ b/templates/result.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NER Extraction Result</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -24,46 +26,50 @@
             max-width: 800px;
             text-align: center;
         }
-        h1 {
-            margin-top: 0;
-            color: #333;
+        .highlighted-text {
+            text-align: left;
+            margin-bottom: 2rem;
         }
-        p {
-            margin: 1rem 0;
-            color: #555;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-        li {
-            padding: 1rem 0;
-            border-bottom: 1px solid #ddd;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-        .entity-label {
-            font-weight: bold;
-            color: #007bff;
-            margin-right: 10px;
-        }
-        .entity-image {
-            width: 200px;
-            height: 200px;
-            margin-right: 10px;
-        }
-        a {
+        .entity {
             display: inline-block;
-            margin-top: 1rem;
-            color: #007bff;
-            text-decoration: none;
-            font-weight: bold;
+            padding: 0.25em 0.5em;
+            margin: 0 0.25em 0.25em 0;
+            line-height: 1;
+            border-radius: 0.25em;
         }
-        a:hover {
-            text-decoration: underline;
+        .entity .label {
+            font-size: 0.8em;
+            font-weight: bold;
+            line-height: 1;
+            color: #fff;
+            padding: 0.35em 0.5em;
+            border-radius: 0.25em;
+            text-transform: uppercase;
+            display: inline-block;
+            vertical-align: middle;
+            margin-left: 0.5em;
+        }
+        .entity.PERSON { background: #7ea4db; }
+        .entity.PERSON .label { background: #1f5cbf; }
+        .entity.ORG { background: #a1d0e8; }
+        .entity.ORG .label { background: #59a7c4; }
+        .entity.GPE { background: #b2d7d0; }
+        .entity.GPE .label { background: #469a8c; }
+        .entity.DATE { background: #e4cba8; }
+        .entity.DATE .label { background: #b38b62; }
+        .entity.LOC { background: #e8d6a1; }
+        .entity.LOC .label { background: #c4a346; }
+        .entity.CARDINAL { background: #dbc4a6; }
+        .entity.CARDINAL .label { background: #b48646; }
+        .entity.ORDINAL { background: #e8d0a1; }
+        .entity.ORDINAL .label { background: #c49646; }
+        .entity.NORP { background: #d1a1a8; }
+        .entity.NORP .label { background: #8b4646; }
+        .entity-image {
+            width: 100px;
+            height: 100px;
+            margin-right: 10px;
+            vertical-align: middle;
         }
         .popup {
             display: none;
@@ -101,18 +107,35 @@
     </script>
 </head>
 <body>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="/">Named Entity Extractor</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">About</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <br/><br/><br/>
     <div class="container">
-        <h1>NER Extraction Result</h1>
-        <p>Input Text:</p>
-        <p>{{ text }}</p>
-        <p>Named Entities:</p>
-        <ul>
+        <h2>Named Entities:</h2>
+        <div class="highlighted-text">
+            {{ highlighted_text|safe }}
+        </div>
+        <hr>
+        <h3>Extracted Entities:</h3>
+        <ul class="list-group">
             {% for entity, label in entities %}
-                <li>
-                    <img src="{{ url_for('static', filename='images/' + 
-label + '.png') }}" class="entity-image" alt="{{ label }}">
-                    <span class="entity-label">{{ entity }}</span> - {{ 
-label }}
+                <li class="list-group-item">
+                    <img src="{{ url_for('static', filename='images/' + label + '.png') }}" class="entity-image" alt="{{ label }}">
+                    <span class="entity-label">{{ entity }}</span> - {{ label }}
                 </li>
             {% endfor %}
         </ul>
@@ -120,9 +143,10 @@ label }}
     </div>
     <div id="result-popup" class="popup">
         <p>Your results are ready!</p>
-        <button 
-onclick="document.getElementById('result-popup').style.display='none'">Close</button>
+        <button onclick="document.getElementById('result-popup').style.display='none'">Close</button>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
-
