--- a/templates/result.html
+++ b/templates/result.html
@@ -25,6 +25,8 @@
             width: 80%;
             max-width: 800px;
             text-align: center;
+            overflow-y: auto; /* Enable vertical scrolling */
+            max-height: 80vh; /* Set a max height to trigger scrolling */
         }
         .highlighted-text {
             text-align: left;
